--- a/styles/pages/edit_resource.css
+++ b/styles/pages/edit_resource.css
@@ -40,13 +40,19 @@ form {
   gap: 20px;
 }
 
-/* ---------- Inputs & Labels ---------- */
+/*Inputs & Labels */
 label {
   font-weight: 500;
   font-size: 14px;
   margin-bottom: 6px;
   display: block;
   color: var(--text-color);
+}
+
+fieldset label {
+  display: inline-flex;
+  align-items: center;
+  vertical-align: middle;
 }
 
 input[type="text"],
